配置文件位置修改

--- a/jeecg-p3-web/src/main/resources/config.properties
+++ b/jeecg-p3-web/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 #UTF-8
 working_dir=C:\\rfid\\workspace\\
-reader18_dir=C:\\Users\\Administrator\\Desktop\\erp\\uhf_v1.0
-scan_interval=5000
+reader18_dir=C:\\rfid\\uhf_v1.0\\
+scan_interval=1000
 
 antenna1=com1
 antenna2=com2
